# wavedata

./: readme.md
wavedata/: README.md  package-lock.json  package.json
wavedata-api/: package.json
wavedata-api/context/: DBContext.js
wavedata-api/contract/: getContract.js  useContract.ts  useContractSolana.js
wavedata-api/contract/client/: utils.mjs  wavedata.mjs
wavedata-api/contract/contracts/: wavedata.json
wavedata-app/: pubspec.yaml  run.bat
wavedata-app/lib/components/: register_modal.dart
wavedata-app/lib/model/: study.dart
wavedata-app/lib/providers/: main_provider.dart
wavedata-app/lib/screens/: auth_screen.dart  connect_data.dart  informedconsent_screen.dart  onboarding_questionnaire_screen.dart  questionnaire_screen.dart  study_id_screen.dart  wearables_screen.dart
wavedata-app/lib/screens/tabscreens/: credit_screen.dart  home_screen.dart  journey_screen.dart  mydata_screen.dart
wavedata/sample/: sample.txt
wavedata/src/: App.js
wavedata/src/contextx/: DBContext.js  MixedContext.js  PolkadotContext.js  SolanaContext.js
wavedata/src/contracts/solana/wavedata/: Cargo.toml  build.bash  deploy.sh  install.bash
wavedata/src/contracts/solana/wavedata/shared/: Cargo.toml
wavedata/src/contracts/solana/wavedata/shared/src/: lib.rs
wavedata/src/contracts/solana/wavedata/src/: account_state.rs  lib.rs  processors.rs  wavedata.rs
wavedata/src/contracts/solana/wavedata/tests/: lib.rs
wavedata/src/pages/: LogIn.js  Payment.js  Register.js  Study.js  StudyDetails.js  SurveyDetails.js
wavedata/src/services/: useContract.js
(+47 files in other folders)
