[package]
name = "solana-bpf-wavedata"
version = "0.1.0"
authors = ["Daryl"]
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
lazy_static = "1.4.0"
num-derive = "0.3"
num_enum = "0.5.1"
num-integer = "0.1.44"
num-traits = "0.2"
serde = { version = "1.0.153", features = ["derive"] }
sol-template-shared = {path = "./shared", version="0.1.0"}
serde_json = "1.0.94"
solana-program = "~1.18.17"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.18.17"
solana-sdk = "~1.18.17"

[lib]
name = "wavedata"
crate-type = ["cdylib", "lib"]
